# MapKom

./: .gitignore  Cargo.toml  README.md  flake.nix  mapkom.code-workspace
.github/ISSUE_TEMPLATE/: bug-report.md  city-bug.md  city-request.md  feature-request.md
.github/workflows/: build_client.yml  clippy.yml  eslint.yml  expo_doctor.yml
mapkom_client/: .env  .eslintignore  .gitignore  app.json  babel.config.js  package.json
mapkom_client/app/: +not-found.tsx  _layout.tsx
mapkom_client/app/(tabs)/: _layout.tsx  about.tsx  index.tsx  index.web.tsx
mapkom_client/lib/: Icon.d.ts  geometry.ts  image.d.ts  mapFilters.ts  mapMarkerStyles.ts  styles.ts  vehicle.ts
mapkom_client/lib/components/: MapFabStack.tsx  TabBar.tsx
mapkom_client/lib/hooks/: useLocationMarkers.ts  useMapStyle.ts
mapkom_client/lib/i18n/: en.json  index.ts  pl.json
mapkom_client/lib/mapStyles/: dark.json  light.json
mapkom_client/lib/providers/: BackendUrlProvider.tsx  SnackbarToastProvider.tsx  SocketIoProvider.tsx
mapkom_server/: Cargo.toml
mapkom_server/src/: api.rs  cities.rs  error.rs  geometry.rs  main.rs  main2.rs  socketio.rs
mapkom_server/src/api/: health.rs  stats.rs
mapkom_server/src/cities/: wroclaw.rs
mapkom_server/src/cities/wroclaw/: gtfs.rs  location_sources.rs
mapkom_server/src/cities/wroclaw/gtfs/: agencies.rs  calendar.rs  calendar_dates.rs  control_stops.rs  feed_info.rs  route_types.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  trips.rs  variants.rs  vehicle_types.rs
mapkom_server/src/cities/wroclaw/location_sources/: impk.rs  mpk_web.rs  open_data.rs
mapkom_server/src/socketio/: send_vehicle_locations.rs  update_viewport.rs
(+7 files in other folders)
