cargo-features = ["edition2024"]

[package]
name = "mapkom_server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/main.rs"

[dependencies]
ansi-to-html = "0.2.2"
async-fs = "2.1.2"
axum = { version = "0.7.9", features = ["ws"] }
bincode = "1.3.3"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
csv = "1.3.1"
deunicode = "1.6.0"
diqwest = "3.1.0"
futures = "0.3.31"
htmlescape = "0.3.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = [
  "rustls-tls",
  "http2",
  "json",
  "stream",
], default-features = false }
scraper = "0.22.0"
serde = "1.0.216"
serde_json = "1.0.134"
socketioxide = { version = "0.15.1", features = [
  "tracing",
  "extensions",
  "state",
] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english", "signal"] }
tower = { version = "0.5.2", features = ["full", "log", "tokio"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "json",
  "env-filter",
  "local-time",
  "serde",
  "serde_json",
  "time",
  "tracing-log",
] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-axum = "0.1.3"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
zip = { version = "2.2.2", features = ["deflate"] }

[build-dependencies]
chrono = "0.4.39"
